# MEtest

./: CMakeLists.txt  FindROOT.cmake  README.md  check_sa.cpp  test.cpp
cpp/: CMakeLists.txt  CPPProcess.cc  CPPProcess.h
cpp/helas/: CMakeLists.txt  HelAmps_sm.cc  HelAmps_sm.h  Parameters_sm.cc  Parameters_sm.h
fortran/: CMakeLists.txt  interface.f  matrix.f  pmass.inc  wrap.hpp
fortran/DHELAS/: CMakeLists.txt  FFV1_0.f  FFV2_2.f  FFV2_3.f  VVV1P0_1.f  aloha_file.inc
fortran/MODEL/: CMakeLists.txt  coupl.inc  couplings1.f  couplings2.f  input.inc  intparam_definition.inc  param_read.inc  param_write.inc
